--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "start": "node ."
+    "build": "tsc",
+    "start": "tsc && node ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/node": "^12.0.12",
+    "graphql-request": "^1.8.2",
     "types": "^0.1.1",
     "typescript": "^3.5.2"
   }
